--- a/editor-services/package.json
+++ b/editor-services/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^11.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "shelljs": "^0.8.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -38,7 +39,9 @@
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/shelljs": "^0.8.11",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
